--- a/.github/workflows/TaskBuild.yml
+++ b/.github/workflows/TaskBuild.yml
@@ -18,5 +18,5 @@ jobs:
           Write-host $PSVersionTable.PSVersion.ToString()
           Set-PSRepository psgallery -InstallationPolicy trusted
           Install-Module -Name Pester -RequiredVersion 5.0.4 -confirm:$false -Force
-          .\Task.ps1 'build'
+          .\tasks.ps1 'build'
         shell: pwsh
